Adding/improving Python snippets.

--- a/python/Basics.ipynb
+++ b/python/Basics.ipynb
@@ -2822,9 +2822,68 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "417ca16c",
+   "metadata": {},
+   "source": [
+    "# Single-Line Constructs\n",
+    "\n",
+    "Useful for __one-liners__ at the terminal."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "id": "1609ab2b",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "0\n",
+      "1\n",
+      "2\n",
+      "3\n",
+      "4\n",
+      "5\n",
+      "6\n",
+      "7\n",
+      "8\n",
+      "9\n",
+      "0\n",
+      "0\n",
+      "1\n",
+      "1\n",
+      "2\n",
+      "2\n",
+      "3\n",
+      "3\n",
+      "4\n",
+      "4\n",
+      "5\n",
+      "5\n",
+      "6\n",
+      "6\n",
+      "7\n",
+      "7\n",
+      "8\n",
+      "8\n",
+      "9\n",
+      "9\n"
+     ]
+    }
+   ],
+   "source": [
+    "for i in range(10): print(i)\n",
+    "\n",
+    "for i in range(10): print(i); print(i)  # multiple statements"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
-   "id": "cd962e29",
+   "id": "dc9983bd",
    "metadata": {},
    "outputs": [],
    "source": []
