--- a/python/Built-In Libraries.ipynb
+++ b/python/Built-In Libraries.ipynb
@@ -812,7 +812,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 145,
+   "execution_count": 6,
    "id": "514fe629",
    "metadata": {},
    "outputs": [
@@ -823,7 +823,14 @@
       "10\n",
       "20\n",
       "30\n",
-      "40\n"
+      "40\n",
+      "\n",
+      "True\n",
+      "Point(x=10, y=20)\n",
+      "Point(x=10, y=20)\n",
+      "-4873088377451060145\n",
+      "-4873088377451060145\n",
+      "3342721321007327999\n"
      ]
     }
    ],
@@ -845,7 +852,18 @@
     "print(point1.x)\n",
     "print(point1.y)\n",
     "print(point2.x)\n",
-    "print(point2.y)"
+    "print(point2.y)\n",
+    "print()\n",
+    "\n",
+    "# Operators\n",
+    "point3 = Point(10, 20)\n",
+    "print(point1 == point3)\n",
+    "print(point1)\n",
+    "print(str(point1))\n",
+    "\n",
+    "print(hash(point1))\n",
+    "print(hash(point3))\n",
+    "print(hash(point2))"
    ]
   },
   {
