--- a/python/Decorators.ipynb
+++ b/python/Decorators.ipynb
@@ -1,7 +1,6 @@
 {
  "cells": [
   {
-   "attachments": {},
    "cell_type": "markdown",
    "id": "3ba6469c",
    "metadata": {},
@@ -10,7 +9,6 @@
    ]
   },
   {
-   "attachments": {},
    "cell_type": "markdown",
    "id": "4ef85761",
    "metadata": {},
@@ -66,7 +64,6 @@
    ]
   },
   {
-   "attachments": {},
    "cell_type": "markdown",
    "id": "4f30974a",
    "metadata": {},
@@ -87,9 +84,27 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "53c07851",
+   "metadata": {},
+   "source": [
+    "# Decorator Resolution\n",
+    "\n",
+    "Note that decorators can come from anywhere and be resolved the normal way a name is.\n",
+    "\n",
+    "```Python\n",
+    "@mymodule.submodule.myclass.mydecorator\n",
+    "def f():\n",
+    "    pass\n",
+    "```\n",
+    "\n",
+    "A decorator can even come from something defined in the same class (see __Properties__ for example)."
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
-   "id": "30978e8e",
+   "id": "797307a4",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -111,7 +126,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.10"
+   "version": "3.10.8"
   }
  },
  "nbformat": 4,
