--- a/python/Implementing Special Objects.ipynb
+++ b/python/Implementing Special Objects.ipynb
@@ -746,12 +746,16 @@
     "\n",
     "It allows you to skip defining a constructor just for the purpose of defining member variables for plain old data types.\n",
     "\n",
-    "Check documentation for some sharp edges around **subclasses** and **custom constructor behavior**.\n"
+    "Check documentation for some sharp edges around **subclasses** and **custom constructor behavior**.\n",
+    "\n",
+    "Note that `__eq__`, `__repr__`, and `__str__` are automatically implemented for data classes as well.\n",
+    "\n",
+    "It does not get `__hash__` unless you pass `frozen=True` which makes it __read-only__."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 10,
    "id": "3a541fda",
    "metadata": {},
    "outputs": [
@@ -759,7 +763,10 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "30\n"
+      "30\n",
+      "True\n",
+      "MyClass(x=10)\n",
+      "MyClass(x=10)\n"
      ]
     }
    ],
@@ -781,7 +788,14 @@
     "\n",
     "\n",
     "m = MyClass(10)\n",
-    "print(m.f())"
+    "print(m.f())\n",
+    "\n",
+    "# Operators\n",
+    "n = MyClass(10)\n",
+    "print(m == n)\n",
+    "print(m)\n",
+    "print(str(m))\n",
+    "# print(hash(m)) # not implemented unless pass frozen=Ture in decorator!"
    ]
   },
   {
