--- a/python/Sorted Containers.ipynb
+++ b/python/Sorted Containers.ipynb
@@ -221,7 +221,9 @@
    "source": [
     "# SortedSet\n",
     "\n",
-    "A `SortedSet` acts basically like a normal set, but when you iterate the items, they are in an order given by the `<` operator and/or a `key` given to the constructor.  In addition, items must be __hashable__."
+    "A `SortedSet` acts basically like a normal set, but when you iterate the items, they are in an order given by the `<` operator and/or a `key` given to the constructor.  In addition, items must be __hashable__.\n",
+    "\n",
+    "You can use `[]` to get by index (including negative)."
    ]
   },
   {
@@ -268,7 +270,9 @@
     "\n",
     "A `SortedDict` acts basically like a normal dict, but when you iterate the items, they are in the order given by the `<` operator and/or a `key` given to the constructor.  In addition, items must be __hashable__.\n",
     "\n",
-    "Methods are similar to `SortedList` such as `bisect_left(key)`, `index()`, etc. because underneath, it uses `SortedList`."
+    "Methods are similar to `SortedList` such as `bisect_left(key)`, `index()`, `reversed()`, etc. because underneath, it uses `SortedList`.\n",
+    "\n",
+    "Use `peekitem()` with positive or negative indexing to get at the first and last items."
    ]
   },
   {
