--- a/typescript/Classes.ipynb
+++ b/typescript/Classes.ipynb
@@ -350,9 +350,9 @@
    "source": [
     "# super() call required!\n",
     "\n",
-    "Just like Python - the base won't be automatically called. However, unlike Python, the compiler will force you.\n",
+    "Just like Python - the base won't be automatically called if you give a subclass constructor. However, unlike Python, the compiler will force you.\n",
     "\n",
-    "That only applies in TS - JS will not care if you leave it out (like Python)."
+    "In pure JS, you'll get an error at runtime when you try to construct the derived class if you don't call the base constructor!  You cannot access `this` or return from the derived constructor without calling `super()`."
    ]
   },
   {
