--- a/typescript/Modules and Imports.ipynb
+++ b/typescript/Modules and Imports.ipynb
@@ -1086,9 +1086,21 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "ff0964ac",
+   "metadata": {},
+   "source": [
+    "# Allowed/Disallowed Name/Module Characters\n",
+    "\n",
+    "- dash is OK\n",
+    "- dot is not OK\n",
+    "- underscore is OK"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
-   "id": "b33d5698",
+   "id": "c0b603b8",
    "metadata": {},
    "outputs": [],
    "source": []
