--- a/python/Modules and Packages.ipynb
+++ b/python/Modules and Packages.ipynb
@@ -667,9 +667,20 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "f108238b",
+   "metadata": {},
+   "source": [
+    "# Disallowed File/Module Names\n",
+    "\n",
+    "-  dash is not allowed (because not allowed in identifiers)\n",
+    "-  . is not explicitly disallowed but is ambiguous with folder and thus won't work"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
-   "id": "4bd3d0ac",
+   "id": "d5e5e748",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -691,7 +702,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.10"
+   "version": "3.10.8"
   }
  },
  "nbformat": 4,
