--- a/python/More Functional Stuff.ipynb
+++ b/python/More Functional Stuff.ipynb
@@ -462,9 +462,39 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "c19c4e55",
+   "metadata": {},
+   "source": [
+    "# Calling Lambda Variable Recursively\n",
+    "\n",
+    "Just like with `def`."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "id": "da4b81dc",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "10\n"
+     ]
+    }
+   ],
+   "source": [
+    "f = lambda x: 0 if x < 1 else f(x-1)+1\n",
+    "\n",
+    "print(f(10))"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
-   "id": "15872bcb",
+   "id": "3abe3bab",
    "metadata": {},
    "outputs": [],
    "source": []
