Some updates from Python Leetcode practice.

--- a/python/Built-In Libraries.ipynb
+++ b/python/Built-In Libraries.ipynb
@@ -812,7 +812,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 2,
    "id": "514fe629",
    "metadata": {},
    "outputs": [
@@ -826,6 +826,7 @@
       "40\n",
       "\n",
       "True\n",
+      "False\n",
       "Point(x=10, y=20)\n",
       "Point(x=10, y=20)\n",
       "-4873088377451060145\n",
@@ -858,6 +859,7 @@
     "# Operators\n",
     "point3 = Point(10, 20)\n",
     "print(point1 == point3)\n",
+    "print(point1 < point3) # lexographic\n",
     "print(point1)\n",
     "print(str(point1))\n",
     "\n",
