--- a/python/Collections Tips.ipynb
+++ b/python/Collections Tips.ipynb
@@ -995,9 +995,37 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "5d65314e",
+   "metadata": {},
+   "source": [
+    "# < Operator\n",
+    "\n",
+    "Supported by __tuples__ and __lists__ but __not dictionaries__ or __sets__.\n",
+    "\n",
+    "Applied __lexographically__."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "95935185",
+   "metadata": {},
+   "source": [
+    "# == Operator"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "fe39a832",
+   "metadata": {},
+   "source": [
+    "Supported by __all__ built-in collections, taking keys and values both into account."
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
-   "id": "d18fac19",
+   "id": "c715ed21",
    "metadata": {},
    "outputs": [],
    "source": []
