--- a/python/Implementing Special Objects.ipynb
+++ b/python/Implementing Special Objects.ipynb
@@ -750,7 +750,9 @@
     "\n",
     "Note that `__eq__`, `__repr__`, and `__str__` are automatically implemented for data classes as well.\n",
     "\n",
-    "It does not get `__hash__` unless you pass `frozen=True` which makes it __read-only__."
+    "It does not get `__hash__` unless you pass `frozen=True` which makes it __read-only__.\n",
+    "\n",
+    "Operators like `<` are not supported by default."
    ]
   },
   {
