Adding some updates for Python and JS.

--- a/python/Caveats.ipynb
+++ b/python/Caveats.ipynb
@@ -552,14 +552,15 @@
     "\n",
     "Summary:\n",
     "\n",
-    "- When you create an instance, the current static value (if it exists) is **copied** into the instance.\n",
-    "- Assigning through `self` or externally via the member variable only affects the **instance**.\n",
-    "- Instances are independent, but future new instances are affected by changes to the static version.\n"
+    "- When you create an instance, the current static value (if it exists) is referenced in the instance. It remains linked to that reference.\n",
+    "- Assigning through `self` or externally via the member variable only affects the **instance**, but changing data inside the object affects **everybody** (static and intances).\n",
+    "\n",
+    "In the example below, note how `x` and `a` are different because the `x` symbol itself is rebound in the instance while the existing `a` array is modified."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 46,
+   "execution_count": 4,
    "id": "d03a102e",
    "metadata": {},
    "outputs": [
@@ -567,44 +568,38 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "original value (static): 1\n",
-      "static after reassign: 2\n",
-      "instance variable after construction: 2\n",
-      "instance variable after calling method to reassign: 10\n",
-      "static variable after same method call: 2\n",
-      "static variable after reassigning instance: 2\n",
-      "new instance after construction: 2\n",
-      "final state: MyClass.x=2, m.x=5, n.x=2\n"
+      "Original static: 0,[]\n",
+      "Original instance: 0,[]\n",
+      "Instance after f called: 100,[100]\n",
+      "Static after f called: 0,[100]\n",
+      "Instance after other instances changes a: [100, 100]\n"
      ]
     }
    ],
    "source": [
     "class MyClass:\n",
-    "    x = 1\n",
-    "\n",
+    "    x = 0\n",
+    "    a = []\n",
+    "    \n",
     "    def f(self):\n",
-    "        self.x = 10\n",
+    "        self.x = 100\n",
+    "        self.a.append(self.x)\n",
+    "        \n",
+    "    def __str__(self):\n",
+    "        return str(self.x) + ',' + str(self.a)\n",
     "\n",
-    "\n",
-    "print(f'original value (static): {MyClass.x}')\n",
-    "\n",
-    "MyClass.x = 2\n",
-    "print(f'static after reassign: {MyClass.x}')\n",
+    "print(f'Original static: {MyClass.x},{MyClass.a}')\n",
     "\n",
     "m = MyClass()\n",
-    "print(f'instance variable after construction: {m.x}')\n",
+    "print(f'Original instance: {m}')\n",
     "\n",
-    "m.f()\n",
-    "print(f'instance variable after calling method to reassign: {m.x}')\n",
-    "print(f'static variable after same method call: {MyClass.x}')\n",
-    "\n",
-    "m.x = 5\n",
-    "print(f'static variable after reassigning instance: {MyClass.x}')\n",
+    "m.f();\n",
+    "print(f'Instance after f called: {m}')\n",
+    "print(f'Static after f called: {MyClass.x},{MyClass.a}')\n",
     "\n",
     "n = MyClass()\n",
-    "print(f'new instance after construction: {n.x}')\n",
-    "\n",
-    "print(f'final state: MyClass.x={MyClass.x}, m.x={m.x}, n.x={n.x}')"
+    "n.f()\n",
+    "print(f'Instance after other instances changes a: {m.a}')"
    ]
   },
   {
@@ -1902,9 +1897,21 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "1749bd0f",
+   "metadata": {},
+   "source": [
+    "# Ascii Values\n",
+    "\n",
+    "Because characters are just single-element strings, you can't subtract two chars to get a numeric offset like in other languages.\n",
+    "\n",
+    "Instead, you can use `ord(c)` which gets the ascii value (if applicable).  It will throw if the string is not exactly 1 character.  The opposite is `chr(n)`."
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
-   "id": "04a6527f",
+   "id": "f22d1bc0",
    "metadata": {},
    "outputs": [],
    "source": []
