--- a/typescript/Collections.ipynb
+++ b/typescript/Collections.ipynb
@@ -1544,9 +1544,58 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "9c196b5e",
+   "metadata": {},
+   "source": [
+    "# new Array(count)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "id": "95c4b58e",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Overwriting ts-files/new-array.ts\n"
+     ]
+    }
+   ],
+   "source": [
+    "%%writefile ts-files/new-array.ts\n",
+    "\n",
+    "const a = new Array<number>(10);\n",
+    "console.log(a); // 10 sparse undefined values\n",
+    "console.log(a[0]); // undefined"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "id": "75a7f799",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[ \u001b[90m<10 empty items>\u001b[39m ]\r\n",
+      "\u001b[90mundefined\u001b[39m\r\n"
+     ]
+    }
+   ],
+   "source": [
+    "!ts-node ts-files/new-array.ts"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
-   "id": "87c2ae60",
+   "id": "63f5c1d9",
    "metadata": {},
    "outputs": [],
    "source": []
