--- a/typescript/Functions.ipynb
+++ b/typescript/Functions.ipynb
@@ -1736,9 +1736,49 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "6233aaaa",
+   "metadata": {},
+   "source": [
+    "# Mismatched Positional Args"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "id": "0c91bf7f",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "undefined"
+      ]
+     },
+     "execution_count": 4,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "(() => {\n",
+    "    function f() {\n",
+    "        console.log('ok');\n",
+    "    }\n",
+    "    \n",
+    "    function g(a) {\n",
+    "        console.log(a);\n",
+    "    }\n",
+    "    \n",
+    "    // f(10); // ILLEGAL in TS, LEGAL in JS (arg ignored)\n",
+    "    // g(); // ILLEGAL in TS, LEGAL in JS (a = undefined)\n",
+    "})();"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
-   "id": "905e4259",
+   "id": "657eca0a",
    "metadata": {},
    "outputs": [],
    "source": []
