--- a/typescript/Strings and Printing.ipynb
+++ b/typescript/Strings and Printing.ipynb
@@ -943,9 +943,52 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "6adfeb2c",
+   "metadata": {},
+   "source": [
+    "# Ascii Values\n",
+    "\n",
+    "Because characters are just single-element strings, you can't subtract two chars to get a numeric offset like in other languages."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "id": "38ac208f",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "65\n",
+      "A\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "undefined"
+      ]
+     },
+     "execution_count": 5,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "(() => {\n",
+    "    const s = 'ABC';\n",
+    "    console.log(s.charCodeAt(0));\n",
+    "    console.log(String.fromCharCode(65));\n",
+    "})();"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
-   "id": "32918f14",
+   "id": "50a3333f",
    "metadata": {},
    "outputs": [],
    "source": []
