Adding clarification about slices and floor division.

--- a/typescript/Collections.ipynb
+++ b/typescript/Collections.ipynb
@@ -1593,9 +1593,60 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "8c78f161",
+   "metadata": {},
+   "source": [
+    "# arr.slice() and floating point\n",
+    "\n",
+    "Floating point numbers passed in as integer bounds are __automatically floored__."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 1,
+   "id": "c951f7e6",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Writing ts-files/slice-float.ts\n"
+     ]
+    }
+   ],
+   "source": [
+    "%%writefile ts-files/slice-float.ts\n",
+    "\n",
+    "const a = [1, 2, 3];\n",
+    "console.log(a.slice(0, a.length / 2));\n",
+    "console.log(a.slice(a.length / 2, a.length));"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "id": "fd3f3d0e",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[ \u001b[33m1\u001b[39m ]\r\n",
+      "[ \u001b[33m2\u001b[39m, \u001b[33m3\u001b[39m ]\r\n"
+     ]
+    }
+   ],
+   "source": [
+    "!ts-node ts-files/slice-float.ts"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
-   "id": "63f5c1d9",
+   "id": "4be2297f",
    "metadata": {},
    "outputs": [],
    "source": []
