Adding initial Django setup to Python web.

--- a/python/Web Backend.ipynb
+++ b/python/Web Backend.ipynb
@@ -855,6 +855,298 @@
   },
   {
    "cell_type": "markdown",
+   "id": "479b48ff",
+   "metadata": {},
+   "source": [
+    "# Django"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "8fe3938e",
+   "metadata": {},
+   "source": [
+    "## Introduction"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "92422fd8",
+   "metadata": {},
+   "source": [
+    "Django is similar in some ways to Flask, but it is more fully-featured (__\"batteries included\"__) and includes the database logic without requiring SQLAlchemy, making it a more __data driven__ framework.\n",
+    "\n",
+    "Like Flask, it can be run on its own for development/debugging purposes, but can be hosted in production with __gunicorn__.  Instead of running a module like you do when using Flask, you run the project's __wsgi file__ with gunicorn."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "ceb5b77d",
+   "metadata": {},
+   "source": [
+    "## Installation"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 1,
+   "id": "fe778bba",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Collecting django\n",
+      "  Downloading Django-5.0-py3-none-any.whl (8.1 MB)\n",
+      "\u001b[2K     \u001b[90m━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━\u001b[0m \u001b[32m8.1/8.1 MB\u001b[0m \u001b[31m2.0 MB/s\u001b[0m eta \u001b[36m0:00:00\u001b[0m00:01\u001b[0m00:01\u001b[0m\n",
+      "\u001b[?25hCollecting asgiref>=3.7.0 (from django)\n",
+      "  Downloading asgiref-3.7.2-py3-none-any.whl (24 kB)\n",
+      "Requirement already satisfied: sqlparse>=0.3.1 in /Users/davidpetrofsky/miniforge3/envs/ai/lib/python3.10/site-packages (from django) (0.4.4)\n",
+      "Requirement already satisfied: typing-extensions>=4 in /Users/davidpetrofsky/miniforge3/envs/ai/lib/python3.10/site-packages (from asgiref>=3.7.0->django) (4.5.0)\n",
+      "Installing collected packages: asgiref, django\n",
+      "Successfully installed asgiref-3.7.2 django-5.0\n"
+     ]
+    }
+   ],
+   "source": [
+    "!pip install django"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "98b04e14",
+   "metadata": {},
+   "source": [
+    "## Creating Project\n",
+    "\n",
+    "The `django-admin` shell command takes a `startproject` command to let you create a new project.\n",
+    "\n",
+    "This creates a folder for your project in the current directory, which contains these items:\n",
+    "  - `manage.py`\n",
+    "    - a generated cmdline utility for managing your project from then on\n",
+    "  - `myproject` folder\n",
+    "    - or whatever the name of your project is\n",
+    "    - note that this is redundant with its own parent folder's name\n",
+    "    - `__init__.py` just makes it a python package\n",
+    "    - `settings.py` for Django project settings\n",
+    "    - `urls.py` for mapping urls for the project\n",
+    "    - `asgi.py` and `wsgi.py` are endpoints in ASGI and WSGI formats for serving (eg. via __gunicorn__)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 20,
+   "id": "e850ba2d",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "!django-admin startproject myproject"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 21,
+   "id": "25b9b512",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "\u001b[31mmanage.py\u001b[m\u001b[m \u001b[34mmyproject\u001b[m\u001b[m\r\n",
+      "\r\n",
+      "myproject/myproject:\r\n",
+      "__init__.py asgi.py     settings.py urls.py     wsgi.py\r\n"
+     ]
+    }
+   ],
+   "source": [
+    "!ls -R myproject"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "57b6f295",
+   "metadata": {},
+   "source": [
+    "## Running Server\n",
+    "\n",
+    "From within the folder for your project, you run `manage.py` with various commands to manage your project.  In this case, you use `runserver` to run the server for development/debugging purposes.\n",
+    "\n",
+    "The default port is 8000."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 26,
+   "id": "f1bda4d8",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Watching for file changes with StatReloader\n",
+      "Performing system checks...\n",
+      "\n",
+      "System check identified no issues (0 silenced).\n",
+      "\u001b[31m\n",
+      "You have 18 unapplied migration(s). Your project may not work properly until you apply the migrations for app(s): admin, auth, contenttypes, sessions.\u001b[0m\n",
+      "\u001b[31mRun 'python manage.py migrate' to apply them.\u001b[0m\n",
+      "December 16, 2023 - 07:17:11\n",
+      "Django version 5.0, using settings 'myproject.settings'\n",
+      "Starting development server at http://127.0.0.1:8000/\n",
+      "Quit the server with CONTROL-C.\n",
+      "\n",
+      "Not Found: /\n",
+      "[16/Dec/2023 07:17:12] \u001b[33m\"GET / HTTP/1.1\" 404 2269\u001b[0m\n",
+      "/Users/davidpetrofsky/repos/snippets/python/myproject/myproject/urls.py changed, reloading.\n",
+      "Watching for file changes with StatReloader\n",
+      "Performing system checks...\n",
+      "\n",
+      "System check identified no issues (0 silenced).\n",
+      "\u001b[31m\n",
+      "You have 18 unapplied migration(s). Your project may not work properly until you apply the migrations for app(s): admin, auth, contenttypes, sessions.\u001b[0m\n",
+      "\u001b[31mRun 'python manage.py migrate' to apply them.\u001b[0m\n",
+      "December 16, 2023 - 07:17:41\n",
+      "Django version 5.0, using settings 'myproject.settings'\n",
+      "Starting development server at http://127.0.0.1:8000/\n",
+      "Quit the server with CONTROL-C.\n",
+      "\n",
+      "Not Found: /\n",
+      "[16/Dec/2023 07:17:44] \u001b[33m\"GET / HTTP/1.1\" 404 2322\u001b[0m\n",
+      "[16/Dec/2023 07:18:32] \u001b[32m\"GET /simple HTTP/1.1\" 301 0\u001b[0m\n",
+      "[16/Dec/2023 07:18:32] \u001b[m\"GET /simple/ HTTP/1.1\" 200 13\u001b[0m\n",
+      "Not Found: /\n",
+      "[16/Dec/2023 07:22:00] \u001b[33m\"GET / HTTP/1.1\" 404 2322\u001b[0m\n",
+      "[16/Dec/2023 07:22:04] \u001b[m\"GET /simple/ HTTP/1.1\" 200 13\u001b[0m\n",
+      "^C\n"
+     ]
+    }
+   ],
+   "source": [
+    "!cd myproject && python3 manage.py runserver"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "4630ad57",
+   "metadata": {},
+   "source": [
+    "## Adding Application\n",
+    "\n",
+    "The `startapp` command adds an application to the project.  An application is basically a subsite off of the main site.\n",
+    "\n",
+    "It is not linked into the main site yet by default, so you will not see any change to the main page when you run the project.\n",
+    "\n",
+    "The `myapp` folder (sibling of the `myproject` folder) has these items:\n",
+    "  - `__init__.py` to make it a package\n",
+    "  - `models.py` to define database models\n",
+    "  - `views.py` for configuring http requests\n",
+    "  - `apps.py`\n",
+    "  - `admin.py`\n",
+    "  - `tests.py` for tests\n",
+    "  \n",
+    "There is also a `sqlite3` database!"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 23,
+   "id": "16c898b3",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "!cd myproject && python3 manage.py startapp myapp"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 24,
+   "id": "88d180fb",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "db.sqlite3 \u001b[31mmanage.py\u001b[m\u001b[m  \u001b[34mmyapp\u001b[m\u001b[m      \u001b[34mmyproject\u001b[m\u001b[m\r\n",
+      "\r\n",
+      "myproject/myapp:\r\n",
+      "__init__.py apps.py     models.py   views.py\r\n",
+      "admin.py    \u001b[34mmigrations\u001b[m\u001b[m  tests.py\r\n",
+      "\r\n",
+      "myproject/myapp/migrations:\r\n",
+      "__init__.py\r\n",
+      "\r\n",
+      "myproject/myproject:\r\n",
+      "__init__.py \u001b[34m__pycache__\u001b[m\u001b[m asgi.py     settings.py urls.py     wsgi.py\r\n",
+      "\r\n",
+      "myproject/myproject/__pycache__:\r\n",
+      "__init__.cpython-310.pyc urls.cpython-310.pyc\r\n",
+      "settings.cpython-310.pyc wsgi.cpython-310.pyc\r\n"
+     ]
+    }
+   ],
+   "source": [
+    "!ls -R myproject"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "9c92e636",
+   "metadata": {},
+   "source": [
+    "## Configuring Project to Use Application"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "315dd72e",
+   "metadata": {},
+   "source": [
+    "1. Manually edit `myproject/myproject/settings.py` to add `myapp` to the end of the list of `INSTALLED_APPS`.\n",
+    "1. Add a simple HTTP GET endpoint getting a string in `myproject/myapp/views.py`.\n",
+    "\n",
+    "    ```Python\n",
+    "    from django.http import HttpResponse\n",
+    "\n",
+    "    def simple_view(request):\n",
+    "        return HttpResponse(\"Hello, world!\")\n",
+    "    ```\n",
+    "1. Add `myproject/myapp/urls.py` to configure a url to call into that endpoint:\n",
+    "    ```Python\n",
+    "    from django.urls import path\n",
+    "    from .views import simple_view\n",
+    "\n",
+    "    urlpatterns = [\n",
+    "        path('simple/', simple_view),\n",
+    "    ]\n",
+    "    ```\n",
+    "1. Import the above urls into the project's urls by editing `myproject/myproject/urls.py` to look like this:\n",
+    "   ```Python\n",
+    "   from django.contrib import admin\n",
+    "   from django.urls import include, path\n",
+    "\n",
+    "   urlpatterns = [\n",
+    "       path('admin/', admin.site.urls),\n",
+    "       path('myapp/', include('myapp.urls')),  # Include your app's URLs\n",
+    "   ]\n",
+    "   ```\n",
+    "1. Now if you launch the project as above, if you append `myapp/simple` to the end of the URL, it will return the text \"Hello, world!\".\n",
+    "   - it will not add a link to it on the main page though\n",
+    "   - it will also make the default landing page stop working!\n",
+    "1. To add a root page, add an empty string in `myproject/myproject/urls.py` and use a specific function instead of including from elsewhere:\n",
+    "   ```Python\n",
+    "   from myapp.views import home\n",
+    "   ... \n",
+    "   path('', home, name='home'),  # Map the root URL to the view \n",
+    "   ```"
+   ]
+  },
+  {
+   "cell_type": "markdown",
    "id": "f5f45ca9",
    "metadata": {},
    "source": [
@@ -1023,14 +1315,6 @@
     "\n",
     "Handled automatically by `requests`"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "72b5c3d7",
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
