Adding more Django details.

--- a/python/Web Backend.ipynb
+++ b/python/Web Backend.ipynb
@@ -855,7 +855,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "479b48ff",
+   "id": "68ac2b6f",
    "metadata": {},
    "source": [
     "# Django"
@@ -863,7 +863,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "8fe3938e",
+   "id": "eb0f3f22",
    "metadata": {},
    "source": [
     "## Introduction"
@@ -871,7 +871,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "92422fd8",
+   "id": "a65bc65a",
    "metadata": {},
    "source": [
     "Django is similar in some ways to Flask, but it is more fully-featured (__\"batteries included\"__) and includes the database logic without requiring SQLAlchemy, making it a more __data driven__ framework.\n",
@@ -881,7 +881,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "ceb5b77d",
+   "id": "0720da52",
    "metadata": {},
    "source": [
     "## Installation"
@@ -890,7 +890,7 @@
   {
    "cell_type": "code",
    "execution_count": 1,
-   "id": "fe778bba",
+   "id": "e03dbed7",
    "metadata": {},
    "outputs": [
     {
@@ -915,7 +915,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "98b04e14",
+   "id": "05908a46",
    "metadata": {},
    "source": [
     "## Creating Project\n",
@@ -937,7 +937,7 @@
   {
    "cell_type": "code",
    "execution_count": 20,
-   "id": "e850ba2d",
+   "id": "c6fbfae8",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -947,7 +947,7 @@
   {
    "cell_type": "code",
    "execution_count": 21,
-   "id": "25b9b512",
+   "id": "9dc54526",
    "metadata": {},
    "outputs": [
     {
@@ -967,7 +967,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "57b6f295",
+   "id": "0076045a",
    "metadata": {},
    "source": [
     "## Running Server\n",
@@ -980,7 +980,7 @@
   {
    "cell_type": "code",
    "execution_count": 26,
-   "id": "f1bda4d8",
+   "id": "f8d023d2",
    "metadata": {},
    "outputs": [
     {
@@ -1031,7 +1031,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "4630ad57",
+   "id": "6c807990",
    "metadata": {},
    "source": [
     "## Adding Application\n",
@@ -1054,7 +1054,7 @@
   {
    "cell_type": "code",
    "execution_count": 23,
-   "id": "16c898b3",
+   "id": "27dc2488",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1064,7 +1064,7 @@
   {
    "cell_type": "code",
    "execution_count": 24,
-   "id": "88d180fb",
+   "id": "07a6c6ba",
    "metadata": {},
    "outputs": [
     {
@@ -1095,7 +1095,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "9c92e636",
+   "id": "b6232187",
    "metadata": {},
    "source": [
     "## Configuring Project to Use Application"
@@ -1103,7 +1103,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "315dd72e",
+   "id": "3a1a0ec5",
    "metadata": {},
    "source": [
     "1. Manually edit `myproject/myproject/settings.py` to add `myapp` to the end of the list of `INSTALLED_APPS`.\n",
@@ -1147,10 +1147,178 @@
   },
   {
    "cell_type": "markdown",
+   "id": "c28d6061",
+   "metadata": {},
+   "source": [
+    "## Adding RESTful Endpoints with SQLite Database\n",
+    "\n",
+    "The default DB used by ORM operations is the sqlite3 file created when you do `startapp`."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "c13e9336",
+   "metadata": {},
+   "source": [
+    "### 1. Define the Model\n",
+    "\n",
+    "```Python\n",
+    "# myapp/models.py\n",
+    "\n",
+    "from django.db import models\n",
+    "\n",
+    "class Item(models.Model):\n",
+    "    name = models.CharField(max_length=100)\n",
+    "    description = models.TextField()\n",
+    "\n",
+    "    def __str__(self):\n",
+    "        return self.name\n",
+    "```\n",
+    "\n",
+    "### 2. Update the DB from the Model\n",
+    "\n",
+    "```Bash\n",
+    "python manage.py makemigrations\n",
+    "python manage.py migrate\n",
+    "```\n",
+    "\n",
+    "### 3. Create Views\n",
+    "\n",
+    "```Python\n",
+    "# myapp/views.py\n",
+    "\n",
+    "from django.http import JsonResponse, HttpResponse\n",
+    "from django.views.decorators.csrf import csrf_exempt\n",
+    "from .models import Item\n",
+    "import json\n",
+    "\n",
+    "@csrf_exempt  # Disable CSRF for simplicity (not recommended for production)\n",
+    "def item_list(request):\n",
+    "    if request.method == 'GET':\n",
+    "        items = list(Item.objects.values())\n",
+    "        return JsonResponse(items, safe=False)\n",
+    "    elif request.method == 'POST':\n",
+    "        data = json.loads(request.body)\n",
+    "        item = Item.objects.create(**data)\n",
+    "        return JsonResponse({'id': item.id}, status=201)\n",
+    "\n",
+    "@csrf_exempt  # Disable CSRF for simplicity (not recommended for production)\n",
+    "def item_detail(request, id):\n",
+    "    try:\n",
+    "        item = Item.objects.get(pk=id)\n",
+    "    except Item.DoesNotExist:\n",
+    "        return HttpResponse(status=404)\n",
+    "\n",
+    "    if request.method == 'GET':\n",
+    "        return JsonResponse({'name': item.name, 'description': item.description})\n",
+    "\n",
+    "    elif request.method == 'PUT':\n",
+    "        data = json.loads(request.body)\n",
+    "        for field in ['name', 'description']:\n",
+    "            if field in data:\n",
+    "                setattr(item, field, data[field])\n",
+    "        item.save()\n",
+    "        return HttpResponse(status=200)\n",
+    "\n",
+    "    elif request.method == 'DELETE':\n",
+    "        item.delete()\n",
+    "        return HttpResponse(status=200)\n",
+    "```\n",
+    "\n",
+    "### 4. Define URL Patterns\n",
+    "\n",
+    "```Python\n",
+    "# myapp/urls.py\n",
+    "\n",
+    "from django.urls import path\n",
+    "from . import views\n",
+    "\n",
+    "urlpatterns = [\n",
+    "    path('items/', views.item_list, name='item_list'),\n",
+    "    path('items/<int:id>/', views.item_detail, name='item_detail'),\n",
+    "]\n",
+    "```"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "8320df14",
+   "metadata": {},
+   "source": [
+    "## SQLServer Instead of SQLite\n",
+    "\n",
+    "1. Install an adapter like `django-pyodbc-azure`\n",
+    "1. Configure the DB connection in `myproject/settings.py`\n",
+    "1. ```python manage.py makemigrations```\n",
+    "   - this queues up the DB changes in the `migrations` folder\n",
+    "1. ```python manage.py migrate```\n",
+    "   - this applies the queued up changes to the DB itself"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "973d1c23",
+   "metadata": {},
+   "source": [
+    "## Other Features\n",
+    "   - __HTML templates__ to show the data\n",
+    "   - generating __forms__ from models\n",
+    "   - __admin interface__ to manage DB records\n",
+    "   - logging (use python `logging` module)\n",
+    "   - __authentication__ mechanism\n",
+    "   - __authorization__ mechanism"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "777add23",
+   "metadata": {},
+   "source": [
+    "## In-Memory Store\n",
+    "\n",
+    "Just create a class in `models.py` that doesn't use the Django stuff and does its own thing instead.\n",
+    "\n",
+    "```Python\n",
+    "# myapp/models.py\n",
+    "\n",
+    "class InMemoryItemStore:\n",
+    "    def __init__(self):\n",
+    "        self.items = {}\n",
+    "\n",
+    "    def add_item(self, id, data):\n",
+    "        self.items[id] = data\n",
+    "\n",
+    "    def get_item(self, id):\n",
+    "        return self.items.get(id, None)\n",
+    "\n",
+    "    def update_item(self, id, data):\n",
+    "        self.items[id] = data\n",
+    "\n",
+    "    def delete_item(self, id):\n",
+    "        if id in self.items:\n",
+    "            del self.items[id]\n",
+    "\n",
+    "# Creating a global instance of the store\n",
+    "item_store = InMemoryItemStore()  # use this directly in views\n",
+    "```"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "72170211",
+   "metadata": {},
+   "source": [
+    "## DRF (Django Rest Framework)\n",
+    "\n",
+    "`djangorestframework` pip package to make the data serialization a bit more automatic.  It can provide serialization/deserialization help for more __complex data types__."
+   ]
+  },
+  {
+   "cell_type": "markdown",
    "id": "f5f45ca9",
    "metadata": {},
    "source": [
-    "# Making HTTP Requests"
+    "# Making HTTP Requests (as a client)"
    ]
   },
   {
